# llm-course-work

./: README.md  main.py  pyproject.toml
hello-world/: pyproject.toml
