[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "isort>=6.1.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.34",
    "python-dotenv>=1.1.1",
]
